# seam_carving

./: Cargo.toml
src/: bin.rs  cost.rs  lib.rs  seam.rs  sobel.rs
