[package]
name = "seam_carving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
rstest = "0.19.0"

[profile.release]
lto = "fat"

[[bin]]
name = "sc"
path = "src/bin.rs"

